<resources>
    <string name="java_notification_hint">The content cannot be empty.</string>
    <string name="java_notification_channel">Notification Channel</string>
    <string name="java_on_going_notification">Persistent notification reminder</string>
    <string name="java_dialog_toast_text">Without notification permissions, the app cannot work properly.</string>
    <string name="java_dialog_text">Notification Permissions</string>
    <string name="java_dialog_yes">Open</string>
    <string name="java_dialog_no">No</string>

    <string name="testUser0">属于れちゃん的专属构建</string>
    <string name="testUser1">属于しちゃん的专属构建</string>
    <string name="testUser2">属于よちゃん的专属构建</string>
    <string name="testUser3">属于エロさん的专属构建</string>

    <string name="egg">Nya~</string>
    <string name="app_name">Memo and notice</string>
    <string name="layout_name">About</string>
    <string name="setting_name">Settings</string>

    <string name="pic_xz">Tap to select a large icon</string>
    <string name="pic_xz_hint">Icon selected</string>
    <string name="pic_qc">Selected (tap again to clear the large icon)</string>
    <string name="pic_qc_hint">Icon cleared</string>
    <string name="editText_title_name">Title</string>
    <string name="editText_hint_name">Memo content</string>
    <string name="send">Send</string>
    <string name="hide">Hide</string>

    <string name="app_info_name">App Info</string>
    <string name="version_name">Version:</string>
    <string name="version_number_name">1.4.0</string>
    <string name="builder_name">Developer:</string>
    <string name="dev_name">HuiChe</string>

    <string name="provision">隐私条款</string>
    <string name="provisionHint">查看我们的条款</string>
    <string name="qqChat">Join QQ Channel</string>
    <string name="qqChatHint">Welcome to chat|feedback|suggestions</string>
    <string name="github">Repository</string>
    <string name="githubHint">View project source code in the repository</string>
    <string name="ty">Support Development</string>
    <string name="tyHint">Support the project</string>

    <string name="keep_app">Background Keep-Alive</string>
    <string name="keep_app_hint">Allow the app to stay active in the background</string>
</resources>