<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/topBarDimen"
        android:text="@string/layout_name"
        android:gravity="left|center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimaryDark"
        tools:ignore="HardcodedText,RelativeOverlap,RtlHardcoded">
    </TextView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="@dimen/L_R_dimen"
        android:layout_marginRight="@dimen/L_R_dimen"
        android:background="@drawable/background_bg">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription,ImageContrastCheck">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="125dp"
            android:text="@string/app_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="@dimen/L_R_dimen"
        android:layout_marginRight="@dimen/L_R_dimen"
        android:background="@drawable/background_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/Text_L_R_dimen"
            android:layout_marginTop="10dp"
            android:text="@string/app_info_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RelativeOverlap,TextSizeCheck">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/Text_L_R_dimen"
            android:layout_marginTop="45dp"
            android:text="@string/version_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            tools:ignore="HardcodedText,TextSizeCheck">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="@dimen/Text_L_R_dimen"
            android:text="@string/version_number_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            tools:ignore="HardcodedText,RelativeOverlap,TextSizeCheck">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/Text_L_R_dimen"
            android:layout_marginTop="75dp"
            android:text="@string/builder_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            tools:ignore="HardcodedText,TextSizeCheck">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="@dimen/Text_L_R_dimen"
            android:text="@string/dev_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            tools:ignore="HardcodedText,RelativeOverlap,TextSizeCheck">
        </TextView>
    </RelativeLayout>
    <Button
        android:id="@+id/devtq"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/L_R_dimen"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:text="@string/devTQ"
        android:background="@drawable/devtq_button_bg"
        android:textColor="@color/colorPrimaryDark">
    </Button>
</RelativeLayout>