<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/L_R_dimen"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/Toolbar_dimen"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimaryDark"
            tools:ignore="RelativeOverlap,RtlHardcoded">
        </TextView>
        <Button
            android:id="@+id/button_info"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/app_info"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
        </Button>
        <Button
            android:id="@+id/button_setting"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/settings_ic"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
        </Button>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <EditText
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:hint="@string/editText_title_name"
                android:gravity="top"
                android:padding="16dp"
                android:breakStrategy="simple"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimaryDark"
                android:textColorHint="?attr/android:textColorHint"
                android:singleLine="false"
                android:maxLength="15"
                tools:ignore="Autofill,DuplicateSpeakableTextCheck,NestedWeights,TextContrastCheck,TextFields,VisualLintTextFieldSize">
            </EditText>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent">
            </Space>
            <LinearLayout
                android:id="@+id/notice_pic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_bg">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_ripple_bg"
                    android:padding="16dp"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/pic_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pic_xz"
                        android:textColor="?attr/android:textColorHint"
                        android:textSize="16sp"
                        tools:ignore="TextContrastCheck">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp">
        </Space>
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/edittext_bg"
            android:hint="@string/editText_hint_name"
            android:gravity="top"
            android:padding="16dp"
            android:breakStrategy="simple"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimaryDark"
            android:textColorHint="?attr/android:textColorHint"
            android:singleLine="false"
            tools:ignore="Autofill,TextContrastCheck,TextFields,VisualLintTextFieldSize">
        </EditText>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </Space>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:text="@string/send"
        android:textColor="?attr/colorPrimary"
        app:backgroundTint="?attr/colorPrimaryDark"
        app:icon="@drawable/send_ic"
        app:iconTint="?attr/colorPrimary"
        app:iconGravity="textStart"
        tools:ignore="VisualLintButtonSize">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>